crates/picus/tests/ui/missing_clone.rs
use picus::UiComponent;

#[derive(Default, UiComponent)]
struct NoClone;

fn main() {}
